# aoc

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
src/10/: main.cpp
src/10.1/: main.cpp
src/10.2/: main.cpp
src/11/: main.cpp
src/12/: main.cpp
src/13/: main.cpp
src/14/: main.cpp
src/common/: permutation.h  read_file.h
