cmake_minimum_required(VERSION 3.5)
project(aoc)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

add_executable(10.1 src/10.1/main.cpp)
add_executable(10.2 src/10.2/main.cpp)
add_executable(11.1 src/11.1/main.cpp)
add_executable(11.2 src/11.2/main.cpp)
add_executable(12.1 src/12.1/main.cpp)
add_executable(12.2 src/12.2/main.cpp)
add_executable(13.1 src/13.1/main.cpp)
add_executable(13.2 src/13.2/main.cpp)
add_executable(14.1 src/14.1/main.cpp)
add_executable(14.2 src/14.2/main.cpp)
add_executable(15.1 src/15.1/main.cpp)
add_executable(15.2 src/15.2/main.cpp)
