cmake_minimum_required(VERSION 3.0)
project(aoc)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

add_executable(10 src/10/main.cpp)
add_executable(11 src/11/main.cpp)
add_executable(12 src/12/main.cpp)
add_executable(13 src/13/main.cpp)
add_executable(14 src/14/main.cpp)
add_executable(15 src/15/main.cpp)
